--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ut-bus",
   "version": "5.0.0",
   "dependencies": {
-    "multitransport-jsonrpc": "~0.4.0"
+    "multitransport-jsonrpc": "https://github.com/softwaregroup-bg/multitransport-jsonrpc/archive/master.tar.gz",
+    "readable-stream": "~1.1.13",
+    "through2": "~1.1.1",
+    "when": "~3.6.3",
+    "wire": "~0.10.9"
   }
 }
