--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ut-bus",
   "version": "5.0.0",
   "dependencies": {
-    "ut-multitransport-jsonrpc": "git+ssh://git@git.softwaregroup-bg.com:ut5/ut-multitransport-jsonrpc#master",
+    "ut-multitransport-jsonrpc": "git+ssh://git@git.softwaregroup-bg.com:ut5/ut-multitransport-jsonrpc.git#master",
     "ut-log": "git+ssh://git@git.softwaregroup-bg.com:ut5/ut-log.git#master",
     "readable-stream": "~1.1.13",
     "through2": "~1.1.1",
