--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "ut-bus",
-  "version": "5.0.1",
+  "version": "5.1.0",
   "dependencies": {
     "catbox": "~4.2.1",
-    "ut-multitransport-jsonrpc": "~5.0.0",
     "ut-log": "~5.0.0",
     "readable-stream": "~1.1.13",
     "reconnect-core": "^1.0.0",
     "through2": "~1.1.1",
     "lodash": "^3.5.0",
-    "when": "~3.7.2",
+    "when": "~3.7.2"
+  },
+  "devDependencies": {
     "wire": "~0.10.10"
   },
   "publishConfig": {
