--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "ut-bus",
   "version": "5.1.2",
   "dependencies": {
-    "catbox": "~4.2.1",
-    "ut-log": "~5.0.2",
     "ut-rpc": "~5.0.0",
     "readable-stream": "~1.1.13",
     "reconnect-core": "^1.0.0",
     "through2": "~1.1.1",
     "lodash": "^3.5.0",
-    "when": "~3.7.2"
+    "when": "~3.7.2",
+    "wire": "~0.10.10",
+    "joi": "~6.6.1"
   },
   "devDependencies": {
     "wire": "~0.10.10"
