--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ut-bus",
   "version": "5.1.2",
+  "description": "UT bus module",
   "dependencies": {
-    "ut-rpc": "~5.0.0",
+    "ut-rpc": "^5.0.0",
     "readable-stream": "~1.1.13",
     "reconnect-core": "^1.0.0",
     "through2": "~1.1.1",
@@ -12,12 +13,12 @@
     "joi": "~6.6.1"
   },
   "devDependencies": {
-    "wire": "~0.10.10"
+    "wire": "~0.10.10",
+    "ut-log": "^5.0.0"
   },
   "publishConfig": {
     "registry": "http://npm.softwaregroup-bg.com:5001"
   },
-  "description": "UT bus module",
   "repository": {
     "type": "git",
     "url": "git@git.softwaregroup-bg.com:ut5/ut-bus.git"
