--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "5.2.1",
   "description": "UT bus module",
   "dependencies": {
-    "ut-rpc": "^5.0.0",
+    "errno": "^0.1.4",
+    "joi": "~6.6.1",
+    "lodash": "^3.5.0",
     "readable-stream": "~1.1.13",
     "reconnect-core": "^1.0.0",
     "through2": "~1.1.1",
-    "lodash": "^3.5.0",
+    "ut-rpc": "git@git.softwaregroup-bg.com:ut5/ut-rpc.git#v5",
     "when": "~3.7.2",
-    "wire": "~0.10.10",
-    "joi": "~6.6.1"
+    "wire": "~0.10.10"
   },
   "devDependencies": {
     "wire": "~0.10.10",
@@ -19,14 +20,13 @@
   "publishConfig": {
     "registry": "http://npm.softwaregroup-bg.com:5001"
   },
-  "description": "UT bus module",
   "repository": {
     "type": "git",
     "url": "git@git.softwaregroup-bg.com:ut5/ut-bus.git"
   },
-  "browser":{
-    "fs":"./browser/fs",
-    "joi":"./browser/joi",
-    "net":"./browser/net"
+  "browser": {
+    "fs": "./browser/fs",
+    "joi": "./browser/joi",
+    "net": "./browser/net"
   }
 }
