--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "readable-stream": "~1.1.13",
     "reconnect-core": "^1.0.0",
     "through2": "~1.1.1",
-    "ut-rpc": "git@git.softwaregroup-bg.com:ut5/ut-rpc.git#v5",
+    "ut-rpc": "~5.0.1",
     "when": "~3.7.2",
     "wire": "~0.10.10"
   },
