--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ut-bus",
   "version": "5.2.1",
-  "description": "UT bus module",
+  "description": "UT bus module.",
   "dependencies": {
     "ut-rpc": "^5.0.0",
     "readable-stream": "~1.1.13",
