--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "5.3.10",
   "description": "UT bus module",
   "dependencies": {
+    "browser-process-hrtime": "0.1.2",
     "errno": "^0.1.4",
     "joi": "~6.6.1",
     "lodash": "^3.5.0",
