--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "when": "~3.7.2"
   },
   "devDependencies": {
+    "ut-tools": "~0.5.1",
     "wire": "~0.10.10"
   },
   "publishConfig": {
@@ -22,6 +23,10 @@
   "repository": {
     "type": "git",
     "url": "git@git.softwaregroup-bg.com:ut5/ut-bus.git"
+  },
+  "scripts": {
+    "lint": "ut-lint .",
+    "test": "npm run lint"
   },
   "browser": {
     "fs": "./browser/fs",
