--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "readable-stream": "~1.1.13",
     "reconnect-core": "^1.0.0",
     "through2": "~1.1.1",
-    "ut-rpc": "~5.3.0",
+    "ut-rpc": "5.3.1",
     "when": "~3.7.2"
   },
   "devDependencies": {
