#BR-13 Update ut-tools version and integration

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "when": "~3.7.2"
   },
   "devDependencies": {
-    "ut-tools": "~0.5.1",
+    "ut-tools": "~1.0.1",
     "wire": "~0.10.10"
   },
   "publishConfig": {
@@ -26,7 +26,10 @@
   },
   "scripts": {
     "lint": "ut-lint .",
-    "test": "npm run lint"
+    "pre-commit": "npm run lint",
+    "pre-release": "ut-pre-release",
+    "release": "ut-release",
+    "post-release": "ut-post-release"
   },
   "browser": {
     "fs": "./browser/fs",
