--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "when": "~3.7.2"
   },
   "devDependencies": {
-    "ut-tools": "~1.0.1",
-    "wire": "~0.10.10"
+    "ut-tools": "^5.3.1"
   },
   "publishConfig": {
-    "registry": "http://npm.softwaregroup-bg.com:5001"
+    "registry": "https://nexus.softwaregroup-bg.com/repository/npm-internal"
   },
   "repository": {
     "type": "git",
@@ -26,10 +25,20 @@
   },
   "scripts": {
     "lint": "ut-lint .",
-    "pre-commit": "npm run lint",
-    "pre-release": "ut-pre-release",
     "release": "ut-release",
-    "post-release": "ut-post-release"
+    "changelog": "ut-changelog",
+    "check": "ut-check",
+    "cover": "ut-cover",
+    "lint-js": "ut-lint-js .",
+    "postpublish": "ut-postpublish",
+    "postversion": "ut-postversion",
+    "precommit": "ut-precommit",
+    "prepublish": "ut-prepublish",
+    "prepush": "ut-prepush",
+    "pretest": "ut-pretest",
+    "preversion": "ut-preversion",
+    "test": "ut-test",
+    "version": "ut-version"
   },
   "browser": {
     "fs": "./browser/fs",
