--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "when": "3.7.7"
   },
   "devDependencies": {
-    "ut-tools": "^5.3.1"
+    "ut-tools": "^5.3.13"
   },
   "publishConfig": {
     "registry": "https://nexus.softwaregroup-bg.com/repository/npm-internal"
@@ -38,7 +38,9 @@
     "pretest": "ut-pretest",
     "preversion": "ut-preversion",
     "test": "ut-test",
-    "version": "ut-version"
+    "version": "ut-version",
+    "jenkins": "ut-jenkins",
+    "gitlab": "ut-gitlab"
   },
   "browser": {
     "fs": "./browser/fs",
