--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "browser-process-hrtime": "0.1.2",
     "joi": "6.6.1",
-    "lodash": "3.10.1",
+    "lodash.assign": "4.0.9",
+    "lodash.capitalize": "4.1.1",
     "readable-stream": "2.0.6",
     "reconnect-core": "1.0.0",
     "through2": "2.0.1",
