--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "joi": "10.0.6",
     "lodash.assign": "4.2.0",
     "lodash.capitalize": "4.2.1",
-    "readable-stream": "2.2.2",
     "reconnect-core": "1.3.0",
     "through2": "2.0.3",
-    "ut-rpc": "^5.3.15",
-    "ut-error": "^5.4.0"
+    "ut-rpc": "^6.0.0-ut6.0",
+    "ut-error": "^5.4.9"
   },
   "devDependencies": {
     "glob": "7.1.1",
