--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "ut-bus",
-  "version": "5.18.0",
+  "version": "6.0.0-ut6.13",
   "description": "UT bus module",
   "dependencies": {
-    "browser-process-hrtime": "0.1.2",
-    "joi": "10.0.6",
-    "lodash.assign": "4.2.0",
-    "lodash.capitalize": "4.2.1",
-    "readable-stream": "2.2.2",
     "reconnect-core": "1.3.0",
-    "through2": "2.0.3",
-    "ut-rpc": "^5.3.15",
-    "ut-error": "^5.4.0"
+    "ut-rpc": "^6.0.0",
+    "ut-error": "^5.4.9"
   },
   "devDependencies": {
-    "glob": "7.1.1",
-    "ut-tools": "^5.13.5"
+    "glob": "7.1.2",
+    "ut-tools": "^5.30.0"
   },
   "repository": {
     "type": "git",
