--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "6.0.0",
   "description": "UT bus module",
   "dependencies": {
+    "browser-process-hrtime": "0.1.2",
     "reconnect-core": "1.3.0",
     "ut-rpc": "^6.0.0",
     "ut-error": "^5.4.9"
