--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "browser-process-hrtime": "0.1.2",
     "reconnect-core": "1.3.0",
     "ut-rpc": "^6.0.0",
-    "ut-error": "^5.4.9"
+    "ut-error": "~5.5.0-rc-cubalibre.0"
   },
   "devDependencies": {
     "glob": "7.1.2",
