--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ut-bus",
-  "version": "6.4.0",
+  "version": "6.5.0-rc-diesel.0",
   "description": "UT bus module",
   "dependencies": {
     "browser-process-hrtime": "0.1.2",
+    "nats": "0.8.10",
+    "nats-hemera": "5.4.7",
     "reconnect-core": "1.3.0",
     "ut-rpc": "^6.0.0",
     "ut-error": "^5.6.1"
