--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "UT bus module",
   "dependencies": {
     "browser-process-hrtime": "0.1.2",
-    "nats": "0.8.10",
-    "nats-hemera": "5.4.7",
     "reconnect-core": "1.3.0",
     "ut-rpc": "^6.0.0",
     "ut-error": "^5.6.1"
@@ -13,6 +11,11 @@
   "devDependencies": {
     "glob": "7.1.2",
     "ut-tools": "^5.30.0"
+  },
+  "optionalDependencies": {
+    "moleculer": "^0.13.0",
+    "nats": "1.0.0",
+    "nats-hemera": "5.8.6"
   },
   "repository": {
     "type": "git",
