--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "nats-hemera": "5.8.8",
     "ut-tools": "^5.30.0"
   },
+  "optionalDependencies": {
+    "hapi": "^17.2.0",
+    "joi": "^13.1.2"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:softwaregroup-bg/ut-bus.git"
