--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "6.8.0-rc-godfather.7",
   "description": "UT bus module",
   "dependencies": {
-    "browser-process-hrtime": "0.1.2",
+    "browser-process-hrtime": "1.0.0",
+    "joi": "13.7.0",
     "reconnect-core": "1.3.0",
     "ut-rpc": "^6.0.0",
     "ut-error": ">=5.7.0-rc-godfather.2 <=5.7.0-rc-godfather.999"
   },
   "devDependencies": {
     "glob": "7.1.2",
-    "ut-tools": "^5.30.0"
+    "ut-tools": "^6.3.8"
   },
   "optionalDependencies": {
     "consul": "^0.34.0",
     "hapi": "^17.6.0",
-    "joi": "^13.7.0",
     "moleculer": "^0.13.3",
     "nats-hemera": "^6.1.0",
     "nats": "^1.0.1",
