--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "UT bus module",
   "dependencies": {
     "browser-process-hrtime": "1.0.0",
+    "dns-discovery": "6.2.2",
+    "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
     "ut-error": ">=5.7.0-rc-godfather.2 <=5.7.0-rc-godfather.999"
   },
