--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moleculer": "^0.13.5",
     "nats-hemera": "^6.1.1",
     "nats": "^1.2.2",
+    "rabbot": "^2.1.0",
     "request": "^2.88.0",
     "ut-browser-request": "^1.0.2"
   },
