--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
     "mdns-resolver": "0.0.3",
-    "reconnect-core": "1.3.0"
+    "reconnect-core": "1.3.0",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "glob": "7.1.2",
-    "tap": "^12.5.2",
+    "sort-keys": "2.0.0",
+    "tap": "^13.1.0",
     "ut-tools": "^6.11.0"
   },
   "optionalDependencies": {
