--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "7.5.2",
   "description": "UT bus module",
   "dependencies": {
+    "@hapi/hapi": "^18.4.0",
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
     "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
+    "swagger-parser": "^6.0.5",
+    "swagger-ui-dist": "^3.22.1",
+    "ut-swagger2-validator": "^0.3.1",
     "uuid": "3.3.2"
   },
   "devDependencies": {
@@ -23,7 +27,6 @@
   "optionalDependencies": {
     "ut-rpc": "^6.0.0",
     "joi": "13.7.0",
-    "hapi": "^17.8.1",
     "request": "^2.88.0",
     "ut-browser-request": "^1.0.2"
   },
