--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "7.5.2",
   "description": "UT bus module",
   "dependencies": {
-    "@hapi/hapi": "^18.4.0",
+    "@hapi/hapi": "18.4.0",
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
     "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
-    "swagger-parser": "^6.0.5",
+    "swagger-parser": "6.0.5",
     "ut-swagger2-validator": "^0.3.1",
     "uuid": "3.3.2"
   },
