--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "7.5.2",
   "description": "UT bus module",
   "dependencies": {
+    "@hapi/boom": "8.0.1",
     "@hapi/hapi": "18.4.0",
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
-    "joi-to-json-schema": "^5.1.0",
+    "joi-to-json-schema": "5.1.0",
     "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
     "swagger-parser": "6.0.5",
@@ -21,7 +22,7 @@
     "nats": "^1.2.2",
     "rabbot": "^2.1.0",
     "sort-keys": "2.0.0",
-    "swagger-ui-dist": "^3.22.1",
+    "swagger-ui-dist": "^3.24.0",
     "tap": "^13.1.0",
     "ut-tools": "^6.11.0"
   },
