--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "7.5.2",
   "description": "UT bus module",
   "dependencies": {
+    "@hapi/boom": "8.0.1",
+    "@hapi/inert": "5.2.2",
+    "@hapi/hapi": "18.4.0",
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
+    "joi-to-json-schema": "5.1.0",
     "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
+    "swagger-parser": "6.0.5",
+    "ut-swagger2-validator": "^0.3.1",
     "uuid": "3.3.2"
   },
   "devDependencies": {
@@ -17,13 +23,13 @@
     "nats": "^1.2.2",
     "rabbot": "^2.1.0",
     "sort-keys": "2.0.0",
+    "swagger-ui-dist": "^3.24.0",
     "tap": "^13.1.0",
     "ut-tools": "^6.11.0"
   },
   "optionalDependencies": {
     "ut-rpc": "^6.0.0",
     "joi": "13.7.0",
-    "hapi": "^17.8.1",
     "request": "^2.88.0",
     "ut-browser-request": "^1.0.2"
   },
