--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
     "swagger-parser": "6.0.5",
+    "ut-function.merge": "1.2.0",
     "ut-swagger2-validator": "^0.3.1",
     "uuid": "3.3.2"
   },
