--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@hapi/hapi": "18.4.0",
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
+    "jwks-rsa": "1.4.0",
+    "hapi-auth-jwt2": "8.1.0",
     "mdns-resolver": "0.0.3",
     "reconnect-core": "1.3.0",
     "ut-api": "^7.0.2",
