--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hapi/boom": "8.0.1",
     "@hapi/inert": "5.2.2",
+    "@hapi/h2o2": "8.3.2",
     "@hapi/hapi": "18.4.0",
     "browser-process-hrtime": "1.0.0",
     "dns-discovery": "6.2.3",
