--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-/.project
+.nyc_output
+.history
+.idea
+.lint
+.tern*
+.ut_*
+*.log
+coverage
+dev
+dist
 node_modules
-node_modules/**/*
-.idea*
+npm-debug.*
 package-lock.json
-.vscode/settings.json
+yarn.lock
+.ut_*rc
