feat: enable multipart handlers

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@hapi/h2o2": "8.3.2",
     "@hapi/hapi": "18.4.0",
     "browser-process-hrtime": "1.0.0",
+    "content": "4.0.6",
     "dns-discovery": "6.2.3",
+    "fs-plus": "3.1.1",
     "joi": "13.7.0",
     "jwks-rsa": "1.6.2",
     "hapi-auth-jwt2": "8.8.1",
     "mdns-resolver": "0.0.3",
+    "pez": "4.0.5",
     "reconnect-core": "1.3.0",
     "ut-api": "^7.5.0",
     "ut-rpc": "^6.1.2",
