--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "dns-discovery": "6.2.3",
     "fs-plus": "3.1.1",
     "joi": "13.7.0",
-    "jwks-rsa": "1.6.2",
-    "hapi-auth-jwt2": "8.8.1",
+    "jose": "1.26.1",
     "mdns-resolver": "0.0.3",
     "pez": "4.0.5",
     "reconnect-core": "1.3.0",
-    "ut-api": "^7.5.0",
+    "ut-api": "^7.7.0",
     "ut-rpc": "^6.1.2",
     "uuid": "3.3.2"
   },
