--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ut-bus",
-  "version": "7.15.0",
+  "version": "7.16.0-login.2",
   "description": "UT bus module",
   "dependencies": {
-    "@hapi/boom": "8.0.1",
+    "@hapi/boom": "7.4.11",
     "@hapi/inert": "5.2.2",
     "@hapi/h2o2": "8.3.2",
     "@hapi/hapi": "18.4.0",
@@ -12,12 +12,11 @@
     "dns-discovery": "6.2.3",
     "fs-plus": "3.1.1",
     "joi": "13.7.0",
-    "jwks-rsa": "1.6.2",
-    "hapi-auth-jwt2": "8.8.1",
+    "jose": "1.26.1",
     "mdns-resolver": "0.0.3",
     "pez": "4.0.5",
     "reconnect-core": "1.3.0",
-    "ut-api": "^7.5.0",
+    "ut-api": "^7.7.0",
     "ut-rpc": "^6.1.2",
     "uuid": "3.3.2"
   },
