--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nats-hemera": "^6.1.1",
     "nats": "^1.2.2",
     "rabbot": "^2.1.0",
+    "readable-stream": "2.3.3",
     "tap": "^14.10.8",
     "ut-tools": "^6.33.4"
   },
