--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-bus",
-  "version": "7.33.4",
+  "version": "7.34.0-mle.2",
   "description": "UT bus module",
   "dependencies": {
     "@hapi/boom": "9.1.0",
