--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dns-discovery": "6.2.3",
     "fs-plus": "3.1.1",
     "jose": "2.0.3",
+    "multicast-dns": "7.2.2",
     "pez": "4.0.5",
     "reconnect-core": "1.3.0",
     "request": "2.88.0",
