--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hapi/inert": "6.0.3",
     "@hapi/h2o2": "9.0.2",
     "@hapi/hapi": "20.0.1",
+    "@hapi/bourne": "2.0.0",
     "browser-process-hrtime": "1.0.0",
     "content": "4.0.6",
     "dns-discovery": "6.2.3",
@@ -16,6 +17,8 @@
     "pez": "4.0.5",
     "reconnect-core": "1.3.0",
     "request": "2.88.0",
+    "ut-function.capture-hapi": "^1.1.0",
+    "ut-function.capture-request": "^1.1.0",
     "ut-function.timing": "^1.2.0",
     "ut-api": "^7.11.4",
     "ut-rpc": "^6.1.2",
