--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dns-discovery": "6.2.3",
     "fs-plus": "3.1.1",
     "jose": "2.0.3",
-    "lru-cache": "^6.0.0",
+    "lru-cache": "6.0.0",
     "multicast-dns": "7.2.2",
     "pez": "4.0.5",
     "reconnect-core": "1.3.0",
