--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hapi/h2o2": "9.1.0",
     "@hapi/hapi": "20.2.1",
     "@hapi/inert": "6.0.5",
+    "@hapi/pez": "5.0.3",
     "browser-process-hrtime": "1.0.0",
     "content": "4.0.6",
     "fs-plus": "3.1.1",
@@ -15,7 +16,6 @@
     "lodash.set": "4.3.2",
     "lru-cache": "7.4.4",
     "multicast-dns": "7.2.4",
-    "pez": "4.0.5",
     "reconnect-core": "1.3.0",
     "request": "2.88.0",
     "ut-api": "^7.21.0",
