--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@hapi/boom": "9.1.4",
     "@hapi/bourne": "2.0.0",
+    "@hapi/content": "5.0.2",
     "@hapi/h2o2": "9.1.0",
     "@hapi/hapi": "20.2.1",
     "@hapi/inert": "6.0.5",
     "@hapi/pez": "5.0.3",
     "browser-process-hrtime": "1.0.0",
-    "content": "4.0.6",
     "fs-plus": "3.1.1",
     "jose": "4.6.0",
     "lodash.set": "4.3.2",
