fix: relative redirect #UTCORE-121

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,12 @@
         "hemera",
         "mdns",
         "mlek",
+        "mlsk",
         "moleculer",
         "nats",
         "oidc",
         "openid",
+        "preauthorized",
         "rabbot",
         "reqrep"
     ]
