fix: backwards compatibility with jose for setting default 'alg' by kty

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "nats",
         "oidc",
         "openid",
+        "PBES",
         "preauthorized",
         "rabbot",
         "reqrep"
